Table "migrations" {
  "id" "character varying(255)" [pk, not null]
}

Table "order_items" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "order_id" uuid
  "store_id" uuid
  "product_id" uuid
  "quantity" bigint [not null]
  "price" bigint [not null]
  "sub_total" bigint [not null]

  Indexes {
    deleted_at [type: btree, name: "idx_order_items_deleted_at"]
  }
}

Table "order_sequences" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "date" date [not null]
  "last_sequence" bigint [not null]
  "created_at" timestamp
  "updated_at" timestamp
  "deleted_at" timestamp

  Indexes {
    date [type: btree, unique, name: "idx_order_sequences_date"]
    deleted_at [type: btree, name: "idx_order_sequences_deleted_at"]
  }
}

Table "orders" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "user_id" uuid
  "status" "character varying(20)" [default: `'draft'::charactervarying`]
  "grand_total" bigint [not null]
  "order_number" "character varying(50)" [unique]

  Indexes {
    deleted_at [type: btree, name: "idx_orders_deleted_at"]
  }
}

Table "products" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "name" text [not null]
  "slug" text
  "price" bigint [not null]
  "stock" bigint [default: 0]
  "store_id" uuid
  "description" text
  "unit" "character varying(10)"
  "is_active" boolean [default: true]

  Indexes {
    deleted_at [type: btree, name: "idx_products_deleted_at"]
    slug [type: btree, unique, name: "idx_products_slug"]
  }
}

Table "stores" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "name" text [unique, not null]
  "description" text
  "user_id" uuid
  "is_active" boolean [default: true]

  Indexes {
    deleted_at [type: btree, name: "idx_stores_deleted_at"]
  }
}

Table "users" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "username" text [unique, not null]
  "email" text [unique, not null]
  "password" text [not null]
  "role" "character varying(20)" [default: `'buyer'::charactervarying`]
  "is_active" boolean [default: true]
  "picture" "character varying(500)"

  Indexes {
    deleted_at [type: btree, name: "idx_users_deleted_at"]
  }
}

Ref "fk_order_items_product":"products"."id" < "order_items"."product_id"

Ref "fk_order_items_store":"stores"."id" < "order_items"."store_id"

Ref "fk_orders_order_items":"orders"."id" < "order_items"."order_id"

Ref "fk_orders_user":"users"."id" < "orders"."user_id"

Ref "fk_products_store":"stores"."id" < "products"."store_id"

Ref "fk_stores_user":"users"."id" < "stores"."user_id"
